--- a/wallet/package.json
+++ b/wallet/package.json
@@ -16,6 +16,7 @@
     "helmet": "^4.4.1",
     "http-errors": "^1.8.0",
     "joi": "^17.1.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
   },
