--- a/api_gateway/package.json
+++ b/api_gateway/package.json
@@ -10,14 +10,14 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "node-localstorage": "^2.1.6",
     "redis": "^3.0.2",
-    "semver": "^7.3.4",
-    "exceljs": "^4.2.0"
+    "semver": "^7.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
